syntax = "proto3";

package proto;

option go_package = ".;proto";

// 定义发送请求消息.
message SimpleRequest{
  string data = 1;
}

// 定义响应信息.
message SimpleResponse{
  int32 code = 1;
  string value = 2;  
}

// 定义流式响应信息.
message StreamResponse {
  // 流式响应数据.
  string stream_value = 1;
}

// 定义我们的服务（可定义多个服务，每个服务可定义多个接口）.
service StreamServer {
  rpc Route (SimpleRequest) returns (SimpleResponse) {};

  // 服务端流式 rpc，在响应数据前添加 stream.
  rpc ListValue(SimpleRequest) returns (stream StreamResponse){};
}
